--- a/index.html
+++ b/index.html
@@ -1,1 +1,91 @@
-<h1>hello</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Welcome to Pomponette Cafe, where coffee meets comfort.">
+    <meta name="keywords" content="cafe, coffee, pastries, Pomponette">
+    <meta name="author" content="Pomponette Cafe">
+    <link rel="stylesheet" href="mainstyle.css">
+    <link rel="icon" type="image/png" href="img/favicon-08.png"><!-- Link to favicon -->
+
+    <title>Pomponette Cafe - Home</title>
+</head>
+<body>
+    <button id="scrollUp">&#8593;</button> <!-- Upward arrow symbol -->
+
+
+    <div class="container">
+        <header>
+            <img src="img/logocolor-02.png"alt="logo" title="logo">
+            <nav>
+                <ul>
+                      <li><a href="index.html">Home</a></li>   
+                    <li><a href="menu.html">Menu</a></li>
+                    <li><a href="reservation.html">Reservation</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="feedback.html">Feedback</a></li>
+                    <li><a href="careers.html">Careers</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <main>
+            <section id="hero" class="hero">   
+                <h1 id="hero-heading">Discover Your Perfect Flavor Experience!</h1> <!-- ID for Heading -->
+                <p id="hero-paragraph">At Pomponette Cafe, we serve the finest coffee and pastries.</p> <!-- ID for Paragraph -->
+                <a href="menu.html" class="cta-button">Go to Menu</a> <!-- Button Link -->
+
+            </section>
+        
+            <section id="highlights" class="highlights"> <!--Best sellers section-->
+                <h3>Best Sellers</h3>
+                <div class="highlight-item">
+                    <img src="img/hdrinks3.jpg" alt="Delicious Cortado" title="Cortado">
+                    <h4>Cortado</h4>
+                    <p>Enjoy our freshly rosted beans.</p>
+                </div>
+                <div class="highlight-item">
+                    <img src="img/pastries5.jpg" alt="Fresh Pastries" title="Fresh Pastries">
+                    <h4>Lemon Meringue Croissant</h4>
+                    <p>Treat yourself to our delightful pastries.</p>
+                </div>
+                <div class="highlight-item">
+                    <img src="img/cookies3.jpg" alt="Chocolate Bliss" title="Chocolate Bliss">
+                    <h4>Pistachio Rocher</h4>
+                    <p>Pure happiness in every bite.</p>
+                </div>
+            </section>
+        </main>
+
+    
+        <footer>
+            <p>&copy; 2024 Pomponette Cafe. All rights reserved.</p>
+            <div class="social-media">
+                <a href="https://www.instagram.com/pomponette.bh?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">Instagram</a> |
+                <a href="https://www.facebook.com/PomponetteCafe" target="_blank">Facebook</a> |
+                <a href="https://twitter.com/PomponetteCafe" target="_blank">Twitter</a> |
+                <a href="https://www.linkedin.com/company/pomponette-cafe" target="_blank">LinkedIn</a>
+            </div>
+        </footer>
+    </div>
+</body>
+</html>
+<script>
+    // Get the button
+    const scrollUpButton = document.getElementById("scrollUp");
+
+    // Show the button when scrolling down
+    window.onscroll = function() {
+        if (document.body.scrollTop > 200 || document.documentElement.scrollTop > 200) {
+            scrollUpButton.style.display = "block";
+        } else {
+            scrollUpButton.style.display = "none";
+        }
+    };
+
+    // Scroll to the top when the button is clicked
+    scrollUpButton.onclick = function() {
+        window.scrollTo({top: 0, behavior: 'smooth'});
+    };
+</script>
